unpackaged/main/default/objects/ETI_Inspection_Receipt__c/ETI_Inspection_Receipt__c.object-meta.xml
<CustomObject>
    <label>Aman Receipt</label>
    <nameField>
        <displayFormat>RCPT-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aman Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>