unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Auth_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auth Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>