unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/Cash_Receipt_ID__c.field-meta.xml
<CustomField>
    <fullName>Cash_Receipt_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cash Receipt ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>