unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/Chassis_No__c.field-meta.xml
<CustomField>
    <fullName>Chassis_No__c</fullName>
    <formula>Bookings__r.Chassis_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chassis No</label>
    <type>Text</type>
</CustomField>