unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/CrmTrxReference__c.field-meta.xml
<CustomField>
    <fullName>CrmTrxReference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trx Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>