unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Receipts1</relationshipName>
    <type>Lookup</type>
</CustomField>