unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>