unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/ET_Status__c.field-meta.xml
<CustomField>
    <fullName>ET_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>