unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/ETI_Account__c.field-meta.xml
<CustomField>
    <fullName>ETI_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>