unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/ETI_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETI_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>