unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/isSyncedToAman__c.field-meta.xml
<CustomField>
    <fullName>isSyncedToAman__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSyncedToAman</label>
    <type>Checkbox</type>
</CustomField>