unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/Operating_unit__c.field-meta.xml
<CustomField>
    <fullName>Operating_unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating unit</label>
    <referenceTo>ETSALES_Operating_unit__c</referenceTo>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>