unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>ETST_Payment__c</referenceTo>
    <relationshipLabel>Aman Receipts</relationshipLabel>
    <relationshipName>Aman_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>