unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/Plate_No__c.field-meta.xml
<CustomField>
    <fullName>Plate_No__c</fullName>
    <formula>Bookings__r.Plate_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plate No</label>
    <type>Text</type>
</CustomField>