unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/Receipt_No__c.field-meta.xml
<CustomField>
    <fullName>Receipt_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Receipt No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>