unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/Receipt_Type__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Receipt Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>