unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/Service_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Line Item</label>
    <referenceTo>ETI_Service_Line_Item__c</referenceTo>
    <relationshipLabel>Aman Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>