unpackaged/main/default/objects/ETI_Inspection_Receipt__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <formula>IF( OR((Integration_Status__c==&#39;Failed&#39;),( Integration_Status__c ==&#39;Error&#39;)) ,
IMAGE(&#39;/resource/1595747021000/Red&#39;, &#39;Failed&#39;,26,26),
IF(( Integration_Status__c==&#39;In Progress&#39;),
IMAGE(&#39;/resource/1595747074000/Amber&#39;, &#39;In Progress&#39;,26,26),
IF(( Integration_Status__c ==&#39;Success&#39;),
IMAGE(&#39;/resource/1595746933000/Green&#39;, &#39;Success&#39;,26,26),
&#39;Not Integrated&#39;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync Status</label>
    <type>Text</type>
</CustomField>