unpackaged/main/default/objects/ETI_Inspection_Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AMAN_Receipt_No__c</columns>
    <columns>Service_Line_Item__c</columns>
    <columns>ETI_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>